# foo

./: config.json  default.nix  hairport.cabal  shell.nix
app/: Main.hs
src/: Api.hs  Config.hs  Db.hs  Init.hs  Lib.hs  Models.hs  Types.hs
src/Api/: Airport.hs  Health.hs
test/: AirportSpec.hs  FooSpec.hs
