name:                hairport
version:             0.1.0.0
synopsis:            Haskell/Servant based airport service
-- description:         
homepage:            https://github.hc.ag/tpflug/hairport
license:             AllRightsReserved
license-file:        LICENSE
author:              Tobias Pflug
maintainer:          tobias.pflug@holidaycheck.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable hairport
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >=4.10 && <4.11
                     , hairport
  default-language:    Haskell2010
  ghc-options:         -fwarn-unused-imports

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >=4.10 && <4.11
                     , aeson
                     , bytestring
                     , servant
                     , servant-server
                     , text
                     , transformers
                     , wai
                     , wai-extra
                     , warp
  ghc-options:       -fwarn-unused-imports

test-suite spec
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    default-language:    Haskell2010
    ghc-options:       -fwarn-unused-imports
    other-modules:     FooSpec
    build-depends:     base
                     , servant
                     , servant-server
                     , transformers
                     , aeson
                     , wai
                     , warp
                     , hspec
                     , hairport
                     , servant-client
                     , warp
                     , http-client
                     , http-types
