name:                hairport
version:             0.1.0.0
synopsis:            Haskell/Servant based airport service
-- description:         
homepage:            https://github.hc.ag/tpflug/hairport
license:             AllRightsReserved
license-file:        LICENSE
author:              Tobias Pflug
maintainer:          tobias.pflug@holidaycheck.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable hairport
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >=4.10
                     , hairport
  default-language:    Haskell2010

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-incomplete-patterns -Wincomplete-record-updates
                       -Wincomplete-uni-patterns -Wredundant-constraints
  exposed-modules:     Api
                     , Api.Airport
                     , Api.Health
                     , Init
                     , Models
                     , Types
                     , Db
  build-depends:       base >=4.10
                     , aeson
                     , bytestring
                     , servant
                     , servant-server
                     , text
                     , transformers
                     , wai
                     , wai-extra
                     , warp
                     , directory
                     , mongoDB
                     , mtl
                     , unix
                     , safe
test-suite spec
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    default-language:    Haskell2010
    other-modules:     AirportSpec
    build-depends:     base
                     , servant
                     , servant-server
                     , transformers
                     , aeson
                     , wai
                     , warp
                     , hspec
                     , hairport
                     , servant-client
                     , warp
                     , http-client
                     , http-types
                     , text
